--- a/Harurow.Extensions.One/Harurow.Extensions.One.csproj
+++ b/Harurow.Extensions.One/Harurow.Extensions.One.csproj
@@ -57,6 +57,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AdornmentServices\HarurowExtensionOneService.cs" />
+    <Compile Include="Adornments\RedundantWhiteSpaceAdornment.cs" />
+    <Compile Include="Adornments\LineAdornments\ILineAdornment.cs" />
+    <Compile Include="Adornments\LineAdornments\RedundantWhiteSpacePainter.cs" />
+    <Compile Include="Adornments\LineAdornments\RedundantWhiteSpacesLineAdornment.cs" />
     <Compile Include="Extensions\AdornmentLayerExtensions.cs" />
     <Compile Include="Extensions\ColorExtensions.cs" />
     <Compile Include="Extensions\EditorFormatMapExtensions.cs" />
@@ -65,6 +69,7 @@
     <Compile Include="Extensions\GeometryExtensions.cs" />
     <Compile Include="Adornments\IAdornment.cs" />
     <Compile Include="Adornments\RightMarginAdornment.cs" />
+    <Compile Include="Extensions\UIElementExtensions.cs" />
     <Compile Include="Extensions\WpfTextViewExtensions.cs" />
     <Compile Include="Options\ColorDefinition.cs" />
     <Compile Include="Options\ColorDefinitions.cs" />
@@ -78,6 +83,7 @@
     <Compile Include="Package.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Options\StoreManager.cs" />
+    <Compile Include="RedundantWhiteSpaceMode.cs" />
     <Compile Include="TextAdornmentLayerDefinitions.cs" />
     <Compile Include="TextViewCreationListener.cs" />
   </ItemGroup>
