--- a/Harurow.Extensions.One/Harurow.Extensions.One.csproj
+++ b/Harurow.Extensions.One/Harurow.Extensions.One.csproj
@@ -56,19 +56,28 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="TextViewCreationListeners\HarurowExtensionOneService.LineBreaks.cs" />
-    <Compile Include="TextViewCreationListeners\HarurowExtensionOneService.RedundantWhiteSpace.cs" />
-    <Compile Include="TextViewCreationListeners\HarurowExtensionOneService.IsLockedWheelZoom.cs" />
-    <Compile Include="TextViewCreationListeners\HarurowExtensionOneService.RightMargin.cs" />
-    <Compile Include="TextViewCreationListeners\HarurowExtensionOneService.cs" />
-    <Compile Include="Adornments\LineBreaksAdornment.cs" />
-    <Compile Include="Adornments\LineBreakKind.cs" />
-    <Compile Include="Adornments\LineBreaks\VisibleLineBreaks\TextViewLineExtensions.cs" />
+    <Compile Include="Adornments\CaretIndicators\ICaretAdornment.cs" />
+    <Compile Include="Adornments\CaretIndicators\ColumnIndicatorAdornment.cs" />
+    <Compile Include="Adornments\CaretIndicators\LineIndicatorAdornment.cs" />
+    <Compile Include="Adornments\ICaretAdornment.cs" />
+    <Compile Include="Adornments\ITextViewAdornment.cs" />
+    <Compile Include="Commands\MenuCommandBase.cs" />
+    <Compile Include="Commands\CommandSets.cs" />
+    <Compile Include="Commands\SetUtf8WithBomCommand.cs" />
+    <Compile Include="ListenerServices\HarurowExtensionOneService.CaretIndicator.cs" />
+    <Compile Include="ListenerServices\HarurowExtensionOneService.LineBreaks.cs" />
+    <Compile Include="ListenerServices\HarurowExtensionOneService.RedundantWhiteSpace.cs" />
+    <Compile Include="ListenerServices\HarurowExtensionOneService.IsLockedWheelZoom.cs" />
+    <Compile Include="ListenerServices\HarurowExtensionOneService.RightMargin.cs" />
+    <Compile Include="ListenerServices\HarurowExtensionOneService.cs" />
+    <Compile Include="Adornments\LineBreaks\TextViewAdornment.cs" />
+    <Compile Include="Adornments\LineBreaks\LineBreakKind.cs" />
+    <Compile Include="Adornments\LineBreaks\TextViewLineExtensions.cs" />
     <Compile Include="Adornments\LineBreaks\VisibleLineBreaks\Painter.cs" />
-    <Compile Include="Adornments\LineBreaks\VisibleLineBreaks\VisibleLineBreakLineAdornment.cs" />
-    <Compile Include="Adornments\LineBreaks\WarningLineBreaks\WarningLineBreakLineAdornment.cs" />
+    <Compile Include="Adornments\LineBreaks\VisibleLineBreaks\LineAdornment.cs" />
+    <Compile Include="Adornments\LineBreaks\WarningLineBreaks\LineAdornment.cs" />
     <Compile Include="Adornments\LineBreaks\WarningLineBreaks\Painter.cs" />
-    <Compile Include="Adornments\RedundantWhiteSpacesAdornment.cs" />
+    <Compile Include="Adornments\RedundantWhiteSpaces\TextViewAdornment.cs" />
     <Compile Include="Adornments\ILineAdornment.cs" />
     <Compile Include="Adornments\RedundantWhiteSpaces\Painter.cs" />
     <Compile Include="Adornments\RedundantWhiteSpaces\LineAdornment.cs" />
@@ -79,7 +88,7 @@
     <Compile Include="Extensions\GeometryDrawingExtensions.cs" />
     <Compile Include="Extensions\GeometryExtensions.cs" />
     <Compile Include="Adornments\IAdornment.cs" />
-    <Compile Include="Adornments\RightMarginAdornment.cs" />
+    <Compile Include="Adornments\RightMargin\TextViewAdornment.cs" />
     <Compile Include="Extensions\SnapshotSpanExtensions.cs" />
     <Compile Include="Extensions\TextViewLineExtensions.cs" />
     <Compile Include="Extensions\UIElementExtensions.cs" />
@@ -98,8 +107,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Options\StoreManager.cs" />
     <Compile Include="Options\RedundantWhiteSpaceMode.cs" />
-    <Compile Include="TextAdornmentLayerDefinitions.cs" />
+    <Compile Include="ListenerServices\TextAdornmentLayerDefinitions.cs" />
     <Compile Include="TextViewCreationListener.cs" />
+    <Compile Include="TextViewHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -126,9 +136,11 @@
     <Reference Include="Microsoft.VisualStudio.CommandBars, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.ComponentModelHost, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.CoreUtility, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.VisualStudio.CoreUtility.15.8.525\lib\net46\Microsoft.VisualStudio.CoreUtility.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.Editor, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.ImageCatalog, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.VisualStudio.ImageCatalog.15.8.28010\lib\net45\Microsoft.VisualStudio.ImageCatalog.dll</HintPath>
     </Reference>
@@ -191,7 +203,7 @@
       <HintPath>..\packages\Microsoft.VisualStudio.Text.UI.15.8.525\lib\net46\Microsoft.VisualStudio.Text.UI.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.Text.UI.Wpf, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.VisualStudio.Text.UI.Wpf.15.8.525\lib\net46\Microsoft.VisualStudio.Text.UI.Wpf.dll</HintPath>
+      <HintPath>..\packages\Microsoft.VisualStudio.Text.UI.Wpf.15.6.27740\lib\net46\Microsoft.VisualStudio.Text.UI.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TextManager.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <HintPath>..\packages\Microsoft.VisualStudio.TextManager.Interop.7.10.6071\lib\net11\Microsoft.VisualStudio.TextManager.Interop.dll</HintPath>
@@ -269,6 +281,9 @@
     <Analyzer Include="..\packages\Microsoft.VisualStudio.Threading.Analyzers.15.8.145\analyzers\cs\Microsoft.VisualStudio.Threading.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <VSCTCompile Include="Package.vsct">
+      <SubType>Designer</SubType>
+    </VSCTCompile>
     <Content Include="ja-JP\extension.vsixlangpack" />
     <Content Include="ja-JP\LICENSE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
