--- a/Harurow.Extensions.One/Harurow.Extensions.One.csproj
+++ b/Harurow.Extensions.One/Harurow.Extensions.One.csproj
@@ -66,13 +66,13 @@
     <Compile Include="Commands\SetUtf8WithBomCommand.cs" />
     <Compile Include="StatusBars\Models\EncodingInfo.cs" />
     <Compile Include="StatusBars\Models\GoThereInfo.cs" />
-    <Compile Include="StatusBars\IStatusBarInfoItem.cs" />
+    <Compile Include="StatusBars\Models\IStatusBarInfoItem.cs" />
     <Compile Include="StatusBars\Models\LineBreakInfo.cs" />
     <Compile Include="StatusBars\ViewModels\StatusBarInfoItemViewModel.cs" />
     <Compile Include="UserInterfaces\KeyEvents.cs" />
-    <Compile Include="UserInterfaces\KeyProcessor.cs" />
-    <Compile Include="UserInterfaces\MouseProcessor.cs" />
-    <Compile Include="UserInterfaces\KeyProcessorProvider.cs" />
+    <Compile Include="UserInterfaces\GoThereKeyProcessor.cs" />
+    <Compile Include="UserInterfaces\GoThereMouseProcessor.cs" />
+    <Compile Include="UserInterfaces\GoThereKeyProcessorProvider.cs" />
     <Compile Include="ListenerServices\HarurowExtensionOneService.CaretIndicator.cs" />
     <Compile Include="ListenerServices\HarurowExtensionOneService.EncodingInfo.cs" />
     <Compile Include="ListenerServices\HarurowExtensionOneService.LineBreaks.cs" />
@@ -115,13 +115,13 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="StatusBars\Models\StatusBarInfo.cs" />
+    <Compile Include="StatusBars\Models\StatusBarInfoModel.cs" />
     <Compile Include="StatusBars\StatusBarInfoControl.cs" />
     <Compile Include="StatusBars\ViewModels\StatusBarInfoViewModel.cs" />
     <Compile Include="Extensions\EncodingExtensions.cs" />
     <Compile Include="TextViewCreationListener.cs" />
     <Compile Include="Extensions\LineBreakKindExtensions.cs" />
-    <Compile Include="UserInterfaces\MouseProcessorProvider.cs" />
+    <Compile Include="UserInterfaces\GoThereMouseProcessorProvider.cs" />
     <Compile Include="Utilities\TextViewHelper.cs" />
     <Compile Include="Utilities\StatusBarProvider.cs" />
   </ItemGroup>
